components/nodejs-sample/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: test-app-165786959
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: nodejs-sample
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elnodejs-sample
  namespace: sbudhwar-1
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-nodejs-sample
    weight: null
status: {}
